--- a/fizzbuzz.html
+++ b/fizzbuzz.html
@@ -2,11 +2,20 @@
 	<html>
 	<body>
 	<script>
-		
-		
-		
-		
-			
+		for(q=1;q<=100;q=q+1){
+			if( (q%3) === 0 && (q&5) ===0)
+			{console.log("fizzbuss")
+		}
+		else if ((q%3)===0){
+			console.log("Fizz")
+		}
+		else if ((q%5)===0){
+			console.log("buzz")
+		}
+		else{
+			console.log(q)
+		}
+	}		
 	</script>
 	</body>	
 	</html>
